<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SDAH Yoruba</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="app_id">924951214224981</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="nav_drawer_item_home">Home</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="btn_continue">Continue</string>
    <string name="account_type">www.jcedar.com.ng</string>

    <string name="title_activity_account">Sign In</string>
    <string name="empty_accounts">No EBIPS accounts are available. Add an account to continue.</string>
    <string name="auth_name">POWER</string>
    <string name="str_search_hint">Search name</string>
    <string name="retry">Retry</string>
    <string name="taking_a_while">taking_a_while</string>
    <string name="role_MO">MO</string>
    <string name="title_activity_account_details">Account Details</string>
    <string name="btn_sign_in">Sign In</string>

    <string-array name="themes">
        <item>Theme.Light</item>
        <item>Theme.Dark</item>
        <item>Theme.grey</item>
    </string-array>
    <string-array name="themes_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="fonts">
        <item>Very Small</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
    </string-array>

    <string-array name="fonts_values">
        <item>12</item>
        <item>22</item>
        <item>28</item>
        <item>35</item>
    </string-array>
    <string name="operation_timed_out">Operation timed out, kindly retry.</string>
    <string name="generic_error">"Something happened, try again later".</string>
    <string name="server_error">Service unavailable</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="sign_out">Sign out</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="version">Version</string>
    <string name="developer">JCedar Inc</string>
    <string name="designer">Designer</string>
    <string name="settings_menu">Settings Menu</string>
    <string name="settings">Settings</string>
    <string name="hymn">Hymn</string>
    <string name="fav">Favorites</string>
    <string name="hymn_list">Topical Index</string>
    <string name="action_numerical">Numerical Order</string>
    <string name="action_alpha">A-Z</string>
    <string name="action_clear_fav">Clear list</string>
    <string name="hyphen">-</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_copy">Copy</string>
    <string name="action_all">Select All</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="no_favorite_hymn">No favorite hymn added yet</string>
    <string name="fav_list_cleared">Favourite list cleared</string>
    <string name="item_removed">Item removed from favorites</string>
    <string name="already_added">Hymn already added</string>
    <string name="action_share_hymn">Share Hymn</string>
    <string name="added_successfully">Added successfully</string>
    <string name="select_one">Select at least one word</string>
    <string name="copied">Text copied</string>
    <string name="labels">Labels</string>
    <string name="nav_drawer_item_help"><![CDATA[Help & Feedback]]></string>
    <string name="empty_result">Nothing selected</string>
    <string name="member">Member</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
