<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item android:title="@string/labels">
        <item
            android:id="@+id/nav_hymn_list"
            android:checked="false"
            android:icon="@drawable/ic_hymn"
            android:title="@string/hymn" />
        </item>
        <item
            android:id="@+id/nav_favourite"
            android:checked="false"
            android:icon="@drawable/ic_favorite"
            android:title="@string/fav" />

        <item
            android:id="@+id/nav_index"
            android:checked="false"
            android:icon="@drawable/ic_index"
            android:title="@string/hymn_list" />

        </group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item android:title="@string/settings_menu">

        <item
            android:id="@+id/nav_settings"
            android:checked="false"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        </item>

        <item
            android:id="@+id/nav_help"
            android:checked="false"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_drawer_item_help" />

    </group>
</menu>