<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jcedar.visibook.lautech.ui.NewDashboardActivity">

    <item android:id="@+id/action_search"
        android:title="@string/str_search_hint"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="0"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
   <group android:id="@+id/group" android:checkableBehavior="single">

    <item android:id="@+id/action_numerical" android:title="@string/action_numerical"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_alpha" android:title="@string/action_alpha"
        android:orderInCategory="100" app:showAsAction="never" />
   </group>
</menu>